[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/paper.png" type="Texture" id=1]
[ext_resource path="res://Paper.gd" type="Script" id=2]
[ext_resource path="res://sprites/sentence.png" type="Texture" id=3]
[ext_resource path="res://audio/paper.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 41.45, 49.8405 )

[node name="Paper" type="TextureButton"]

pause_mode = 1
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 88.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 44, 50 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 6
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 45.5757, 52.9266 )
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( -2.14044, -0.951309 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( 38.7078, 84.4914 )
texture = ExtResource( 3 )
flip_v = true

[node name="Sprite2" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( 45.7078, 71.4914 )
texture = ExtResource( 3 )
flip_v = true

[node name="Sprite3" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( 37.7078, 56.4914 )
texture = ExtResource( 3 )
flip_v = true

[node name="Sprite4" type="Sprite" parent="." index="4"]

visible = false
position = Vector2( 52.7078, 43.4914 )
texture = ExtResource( 3 )
flip_v = true

[node name="Sprite5" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( 36.7078, 30.4914 )
texture = ExtResource( 3 )
flip_v = true

[node name="Sprite6" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( 45.7078, 17.4914 )
texture = ExtResource( 3 )
flip_v = true

[node name="ScoreDisplay" type="Label" parent="." index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 70.0
margin_right = 44.0
margin_bottom = 85.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
clip_text = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="9"]

position = Vector2( 75.0735, 51.2406 )
rect = Rect2( -10, -10, 20, 20 )

[node name="HoverSfx" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]


